# spectacles-2-unitree-server

./: .gitattributes  .gitignore  ATTRIBUTION.md  Dockerfile  LICENSE  NOTES.md  README.md  Unitree.esproj  pyproject.toml  unitree-client.py  wasd.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-and-push.yml
Assets/: Image.mat  PBR 1.mat  PBR 2.mat  PBR 3.mat  PBR.mat  Scene.scene  Unlit.mat  unlit.ss_graph
Assets/Joystick/: Cylinder.fbx  ImageMaterial.mat  Joystick.prefab  Joystick.ts  JoystickInner.prefab  JoystickPlane.mat  JoystickScene.scene
Assets/Unitree2Spectacles/Materials/: DiscFinal.mat  DiscTemp.mat
Assets/Unitree2Spectacles/Prefab/: PrefabFinalPosition.prefab  PrefabTemporaryPosition.prefab
Assets/Unitree2Spectacles/Scripts/TS/: CoordinationClient.ts  HandControl.ts  JoystickToggle.ts  RobotDecoyController.ts  SimulationImage.ts  SingleObjectRaycaster.ts  Utils.ts
Assets/Unitree2Spectacles/Textures/: ImageMaterial 1.mat  ImageMaterial.mat
Assets/World Query Hit - Spawn On Surface/Materials/: cloud.mat  house.mat  statue.mat  tree.mat
coordination-server/: Dockerfile
coordination-server/src/: main.py
coordination-server/src/static/: styles.css
coordination-server/src/templates/: connection_details.html  dashboard.html  login.html
src/: main.py
src/templates/: connection_details.html
unitree-client/: Dockerfile  ec2-spot-builder.sh  environment.yml  main.py  pyproject.toml  run-robot-client.sh
unitree-client/ik/: g1_controller.py  g1_solver.py  ik.py
unitree-client/ik/urdf/inspire_hand/meshes/: left_ankle_roll_link.STL  left_elbow_pitch_link.STL  torso_link.STL
unitree-client/src/: main.py
unitree-client/src/ik/: __init__.py  g1_controller.py  g1_solver.py  ik.py
unitree-client/src/ik/urdf/: LICENSE
unitree-client/src/ik/urdf/g1/: README.md
unitree-client/src/ik/urdf/inspire_hand/meshes/: right_elbow_pitch_link.STL  right_knee_link.STL  wrist_yaw_link.STL
unitree-client/src/ik/utils/: weighted_moving_filter.py
